--- a/src/app/add-character/add-character.page.scss
+++ b/src/app/add-character/add-character.page.scss
@@ -1,3 +1,9 @@
+.toolbar-title {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .pg-form {
   max-width: 500px;
   position: absolute;
