--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -30,7 +30,9 @@
             <button type="button" mat-icon-button (click)="drawer.toggle()">
                 <mat-icon aria-label="menu">menu</mat-icon>
             </button>
-            <span class="selected-pg">{{ selection }}</span>
+            <div class="selected-pg-div">
+                <span class="selected-pg"> {{ selection }} </span>
+            </div>
         </mat-toolbar>
     </div>
 
