--- a/src/app/edit-buff/edit-buff.page.scss
+++ b/src/app/edit-buff/edit-buff.page.scss
@@ -1,6 +1,13 @@
 mat-drawer-container {
   flex: 1 1 auto;
 }
+
+.toolbar-title {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .buff-form {
   max-width: 500px;
   position: relative;
