--- a/src/app/edit-character/edit-character.page.scss
+++ b/src/app/edit-character/edit-character.page.scss
@@ -1,3 +1,9 @@
+.toolbar-title {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .pg-form {
   position: absolute;
   float: top;
