Character stats page created, needs to be styled

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,6 +33,9 @@
             <div class="selected-pg-div">
                 <span class="selected-pg"> {{ selection }} </span>
             </div>
+            <button type="button" mat-icon-button style="position: fixed;right: 1rem;">
+                <mat-icon aria-label="face" (click)="characterStats($event)">face</mat-icon>
+            </button>
         </mat-toolbar>
     </div>
 
