Modifiche ai ts, attacchi ulteriori etc...

--- a/src/app/edit-character/edit-character.page.html
+++ b/src/app/edit-character/edit-character.page.html
@@ -57,7 +57,7 @@
           </div>
           <div class="column">
             <mat-form-field class="stat">
-              <input matInput placeholder="Tempra" [(ngModel)]="charToEdit.st.fortitude" name="for_e">
+              <input matInput placeholder="Bonus Tempra Base" [(ngModel)]="charToEdit.st.fortitude" name="for_e">
             </mat-form-field>
           </div>
         </div>
@@ -69,7 +69,7 @@
           </div>
           <div class="column">
             <mat-form-field class="stat">
-              <input matInput placeholder="Riflessi" [(ngModel)]="charToEdit.st.reflex" name="ref_e">
+              <input matInput placeholder="Bonus Riflessi Base" [(ngModel)]="charToEdit.st.reflex" name="ref_e">
             </mat-form-field>
           </div>
         </div>
@@ -81,7 +81,7 @@
           </div>
           <div class="column">
             <mat-form-field class="stat">
-              <input matInput placeholder="Volontà" [(ngModel)]="charToEdit.st.will" name="will_e">
+              <input matInput placeholder="Bonus Volontà Base" [(ngModel)]="charToEdit.st.will" name="will_e">
             </mat-form-field>
           </div>
         </div>
