--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -47,7 +47,7 @@
                 <mat-grid-tile>
                     <mat-card>
                         <mat-card-header>
-                            <mat-card-title [(ngModel)]="actualHits" ngDefaultControl>Tiri: +{{ actualHits}}</mat-card-title>
+                            <mat-card-title [(ngModel)]="actualHits" ngDefaultControl>Tiri: +{{ actualHits }}</mat-card-title>
                         </mat-card-header>
 
                         <mat-card-content>
@@ -116,7 +116,7 @@
                     <mat-card class="normal-card">
                         <mat-card-header>
                             <mat-card-title [(ngModel)]="actualArmor" ngDefaultControl>
-                                Classe armatura: {{ getAC() }} + {{ actualArmor }}
+                                Classe armatura: {{ actualArmor }}
                             </mat-card-title>
                         </mat-card-header>
 
@@ -166,7 +166,7 @@
                 <mat-grid-tile>
                     <mat-card class="ts-card">
                         <mat-card-header [(ngModel)]="actualFortitude" ngDefaultControl>
-                            <mat-card-title>Tempra: {{ getFortitude() }} + {{ actualFortitude }}</mat-card-title>
+                            <mat-card-title>Tempra: {{ actualFortitude }}</mat-card-title>
                         </mat-card-header>
                         <mat-card-content>
                             <p>
@@ -179,7 +179,7 @@
                 <mat-grid-tile>
                     <mat-card class="ts-card">
                         <mat-card-header [(ngModel)]="actualReflex" ngDefaultControl>
-                            <mat-card-title>Riflessi: {{ getReflex() }} + {{ actualReflex }}</mat-card-title>
+                            <mat-card-title>Riflessi: {{ actualReflex }}</mat-card-title>
                         </mat-card-header>
 
                         <mat-card-content>
@@ -193,7 +193,7 @@
                 <mat-grid-tile>
                     <mat-card class="ts-card">
                         <mat-card-header [(ngModel)]="actualWill" ngDefaultControl>
-                            <mat-card-title>Volontà: {{ getWill() }} + {{ actualWill }}</mat-card-title>
+                            <mat-card-title>Volontà: {{ actualWill }}</mat-card-title>
                         </mat-card-header>
 
                         <mat-card-content>
