--- a/src/app/add-buff/add-buff.page.html
+++ b/src/app/add-buff/add-buff.page.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <button mat-button color="secondary" routerLink="">
+  <button mat-button color="secondary" routerLink="" style="left: -1rem">
     <mat-icon>arrow_back</mat-icon>
   </button>
   <div class="toolbar-title">
