--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,8 @@
 <mat-drawer-container>
     <mat-drawer #drawer class="sidenav">
         <mat-toolbar color="primary" label="Lista Personaggi">
-            <mat-label style="width: 70%">Lista Personaggi</mat-label>
-            <button type="button" mat-icon-button style="width: 30%" (click)="drawer.toggle()">
+            <mat-label >Lista Personaggi</mat-label>
+            <button type="button" class="x-button" mat-icon-button (click)="drawer.toggle()">
                 <mat-icon aria-label="close">close</mat-icon>
             </button>
         </mat-toolbar>
@@ -16,13 +16,9 @@
                 </button>
             </a>
         </mat-nav-list>
-        <mat-grid-list cols="1">
-            <mat-grid-tile>
-                <button mat-raised-button class="new-button" (click)="addCharacter(); drawer.toggle()" color="primary">
-                    Nuovo
-                </button>
-            </mat-grid-tile>
-        </mat-grid-list>
+        <button mat-raised-button class="new-button" (click)="addCharacter(); drawer.toggle()" color="primary">
+            Nuovo
+        </button>
     </mat-drawer>
 
     <div class="sidenav-content">
